[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pxctl"
version = "0.1.0-rc2"
authors = [
    {name = "github.com/olegh"},
    {name = "github.com/ttwoti"},
]
description = "Command line tool for Picaso3d printers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tabulate",
    "twine",
    "netifaces"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
]

[tool.hatch.build.targets.wheel]
only-packages = true
only-include = [
  "src/pxcli",
  "src/pxctl"
]
sources = ["src"]

[project.urls]
Homepage = "https://github.com/olegh/pxctl"
Issues = "https://github.com/olegh/pxctl/issues"

[project.scripts]
pxctl = "pxcli:main.main"
